kube/ip-back/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-backend
spec:
  replicas: 2
  minReadySeconds: 15
  selector:
    matchLabels:
      app: ip-backend
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: ip-backend
    spec:
      containers:
        - image: moiseevdi/ip-simple-back
          imagePullPolicy: Always
          name: ip-backend
          ports:
            - containerPort: 80
