kube/ip-back/api-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
spec:
  hosts:
    - testapp.mdiservices.ru
  gateways:
    - ip-ingress-gateway
  http:
    - match:
      - uri:
          prefix: /api
      rewrite:
        uri: " "
      route:
      - destination:
          host: api
          port:
            number: 80
